# unicode2utf8

./: Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.1  traces.0  traces.1
include/: split.h  unicode2utf8.h  varray.h
src/: Makefile  Makefile.am  Makefile.in  main.cpp  split.cpp  unicode2utf8  unicode2utf8.cpp
src/.deps/: main.Po  split.Po  unicode2utf8.Po
